Fix code block missing padding

--- a/css/main.css
+++ b/css/main.css
@@ -680,9 +680,6 @@ td.gutter pre {
   border: none;
   background-color: #fff;
 }
-.highlight > pre {
-  padding: 0;
-}
 td.code pre {
   border-width: 0 0 0 2px;
   border-style: solid;
